# wolf

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  TODO.md  install_dependencies.sh  run.sh
descriptions/aliengo_description/: CMakeLists.txt  package.xml
descriptions/aliengo_description/gazebo/: gazebo.urdf.xacro
descriptions/aliengo_description/launch/: description.launch  upload.launch  world.launch
descriptions/aliengo_description/plotjuggler/: aliengo.xml
descriptions/aliengo_description/robots/: aliengo.srdf.xacro  aliengo.urdf.xacro  aliengo_kinova.srdf.xacro  aliengo_teleop.srdf.xacro
descriptions/aliengo_description/scripts/: go0
descriptions/aliengo_description/urdfs/: leg.xacro
descriptions/anymal_description/: CMakeLists.txt
descriptions/anymal_description/gazebo/: gazebo.urdf.xacro
descriptions/anymal_description/launch/: load.launch  standalone.launch  upload.launch  world.launch
descriptions/anymal_description/robots/: anymal.srdf.xacro  anymal.urdf.xacro
descriptions/anymal_description/scripts/: go0
descriptions/anymal_description/urdfs/: anymal.urdf.original  leg.gazebo.xacro  leg.transmission.xacro
descriptions/anymalc_description/: CMakeLists.txt
descriptions/anymalc_description/gazebo/: gazebo.urdf.xacro
descriptions/anymalc_description/launch/: load.launch  standalone.launch
descriptions/anymalc_description/params/: anymalc_params.yaml
descriptions/anymalc_description/scripts/: go0
descriptions/gen3kinova_description/: CMakeLists.txt  package.xml
descriptions/hyqreal_description/: CMakeLists.txt  package.xml
descriptions/minicheetah_description/: CMakeLists.txt  package.xml
descriptions/sensors_description/: CMakeLists.txt  package.xml
descriptions/spot_description/: CMakeLists.txt
dls_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
dls_controller/cfg/: dls_controller.cfg  task.cfg
dls_controller/config/: anymal_params.yaml  hyq_params.yaml  hyqreal_params.yaml  params.yaml
dls_controller/launch/: dls_controller.launch  dls_controller_bringup.launch  dls_controller_spawn.launch  ik.launch
dls_controller/msg/: TaskPoses.msg  TasksPose.msg
dls_controller/plot_juggler_files/: joint_torques.xml  tasks_tracking.xml
dls_controller/problems/: id.yaml  ik.yaml
dls_controller/scripts/: com_interactive_marker.py
dls_controller/src/: ForceOptimization.cpp  IDProblem.cpp  controller.cpp
dls_controller/srv/: DlsControllerServices.srv
dls_controller/test/: dls_controller_test.cpp  dls_controller_test.launch  dls_controller_test.test  hyq_dummy.cpp  hyq_dummy.h  test_state_estimation.cpp
dls_gazebo_interface/: CMakeLists.txt  dls_hw_sim_plugins.xml  package.xml
dls_gazebo_interface/doc/: manifest.yaml
dls_gazebo_interface/src/: dls_hw_sim.cpp
dls_gazebo_resources/: CMakeLists.txt  README.md  package.xml
dls_gazebo_resources/worlds/: empty.world
dls_hardware_interface/: CMakeLists.txt  package.xml
dls_hardware_interface/src/: dls_robot_hw.cpp
wb_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
wb_controller/cfg/: controller.cfg  problem.cfg  task.cfg  taskCartesian.cfg  taskCom.cfg  taskGeneric.cfg  taskPostural.cfg
wb_controller/cmake/: FindRBDL.cmake
wb_controller/config/: aliengo_arm_params.yaml  aliengo_params.yaml  anymal_params.yaml  hyq_arm_params.yaml  hyq_params.yaml  hyqreal_arm_params.yaml  hyqreal_params.yaml  joint_state_publisher.yaml  solo_params.yaml
wb_controller/launch/: keyboard.launch  plot_node.launch  upload.launch  wb_controller_bringup.launch  wb_controller_spawn.launch  world.launch
wb_controller/msg/: CartesianTask.msg  ComTask.msg  ContactForces.msg  Efforts.msg  FrictionCones.msg  JointsTask.msg  TerrainEstimation.msg  WrenchArray.msg
wb_controller/params/: aliengo_kinova_params.yaml  aliengo_params.yaml  anymal_params.yaml  hyq_kinova_params.yaml  hyq_params.yaml  hyq_teleop_params.yaml  minicheetah_params.yaml  solo_params.yaml  spot_kinova_params.yaml  spot_params.yaml
wb_controller/plot_juggler_files/: aliengo.xml  anymal.xml  base_velocities.xml  grfs_z.xml  hyq.xml  hyq_contact_forces.xml  hyqreal.xml  push.xml  spot.xml  substitution_rules.xml  tasks_tracking_velocities.xml
wb_controller/problems/: ik.yaml
wb_controller/rviz_files/: aliengo_wbc.rviz  spot_wbc.rviz  wbc.rviz
wb_controller/scripts/: com_interactive_marker.py  go0  keyboard_node  plot_foot_trajectories.m
wb_controller/src/: IDProblem.cpp  com_planner.cpp  commands_interface.cpp  controller.cpp  footholds_planner.cpp  gait_generator.cpp  id_problem.cpp  legs_impedance.cpp  legs_kinematics.cpp  plot_node.cpp  quadruped_robot.cpp  state_estimator.cpp  terrain_estimator.cpp  walking_pattern_generator.cpp
wb_controller/srv/: Gains.srv
wb_controller/test/: hyq_dummy.cpp  hyq_dummy.h  robot_dummy.cpp  robot_dummy.h  test_common_utils.h  test_controller.cpp  test_id_problem.cpp  test_state_estimation.cpp  wb_controller_test.cpp  wb_controller_test.test
wb_hardware_interface/: CMakeLists.txt  package.xml
wb_hardware_interface/src/: wb_robot_hw.cpp
wolf_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
wolf_controller/launch/: plot_node.launch  wolf_controller_bringup.launch  wolf_controller_spawn.launch  wolf_navigation.launch
wolf_controller/plotjuggler/: controller.xml
wolf_controller/rviz/: controller.rviz
wolf_controller/scripts/: keyboard_node
wolf_controller/src/: cartesian_trajectory.cpp  com_planner.cpp  controller.cpp  foot_state_machine.cpp  foot_trajectory_ellipse.cpp  foot_trajectory_interface.cpp  footholds_planner.cpp  force_estimator.cpp  gait_generator.cpp  id_problem.cpp  impedance.cpp  legs_impedance.cpp  legs_kinematics.cpp  plot_node.cpp  quadruped_robot.cpp  state_estimator.cpp  state_machine.cpp  terrain_estimator.cpp
wolf_controller/test/: robot_dummy.cpp  test_common_utils.h  test_controller.cpp  test_controller.test  test_id_problem.cpp  test_id_problem.test  test_qp_estimation.cpp  test_state_estimation.cpp  test_trajectory.cpp  wolf_controller_test.cpp  wolf_controller_test.test
(+389 files in other folders)
