<?xml version="1.0"?>
<package format="2">
  <name>dls_gazebo_interface</name>
  <version>0.0.1</version>
  <description>
        This package contains the gazebo hardware interface
  </description>
  <maintainer email="dlsuser@iit.it">TODO</maintainer>

  <license>TODO</license>

  <author>TODO</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>transmission_interface</depend>
  <depend>hardware_interface</depend>
  <depend>dls_hardware_interface</depend>
  <depend>urdf</depend>
  <depend>realtime_tools</depend>

  <export>
	<gazebo_ros_control plugin="${prefix}/dls_hw_sim_plugins.xml"/>
  </export>

</package>
