<?xml version="1.0"?>
<package format="2">
  <name>dls_hardware_interface</name>
  <version>0.0.1</version>
  <description>DLS Hardware Interface</description>
  <maintainer email="todo@iit.it">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend> 
  <depend>hardware_interface</depend> 
  <depend>transmission_interface</depend>
  <depend>urdf</depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
