<?xml version="1.0"?>
<package format="2">
  <name>wb_hardware_interface</name>
  <version>0.0.1</version>
  <description>Hardware Interface</description>
  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend> 
  <depend>hardware_interface</depend> 
  <depend>transmission_interface</depend>
  <depend>urdf</depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
