<?xml version="1.0"?>
<package format="2">
  <name>wolf_controller</name>
  <version>0.0.8</version>
  <description>WoLF: Whole-body Locomotion Framework for quadruped robots. This package contains the whole-body controller.</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>CC BY-NC-ND 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>controller_interface</depend>
  <depend>wolf_hardware_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rt_logger</depend>
  <depend>rospy</depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>wolf_hardware_interface</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/controller_plugin.xml"/>
  </export>

</package>
