<package>
  <name>hyqreal_description</name>
  <version>0.0.1</version>
  <description>
	This package contains the description (mechanical, kinematic, visual,
  etc.) of the HyQ2Max robot. The files in this package are parsed and used by
  a variety of other components. Most users will not interact directly
  with this package.
  </description>
  <maintainer email="andreea.radulescu@iit.it">Andreea Radulescu</maintainer>

  <license>BSD</license>

  <author>Andreea Radulescu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>convex_decomposition</build_depend>
  <build_depend>ivcon</build_depend>

  <run_depend>xacro</run_depend>
  <run_depend>sensors_description</run_depend>

  <test_depend>gtest</test_depend>
  <test_depend>urdfdom</test_depend>
</package>
